# voice-to-textnote

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TEST_COVERAGE_CORE_MODULES_FINAL.md  TEST_COVERAGE_IMPLEMENTATION_SUMMARY.md  alembic.ini  coverage.xml  docker-compose.prod.yml  docker-compose.yml  geeknews_summary.md  knowledge-base.md  moltbook-fetcher.py  mypy.ini  openclaw-workspace-state.json  prd.json  progress.txt  pyproject.toml  ros2_day33_lecture.md
.claude/: settings.json  settings.local.json
.codex/: config.toml  hooks.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  mobile.yml
.moai/: manifest.json
.moai/project/: product.md  structure.md  tech.md
.moai/state/: session-memo.md
.moai/work-plans/: test-coverage-cg.md
.next/: trace  trace-build
.omc/: project-memory.json
.omc/sessions/: 03df8a69-4a80-458e-ae61-3cf8d86e8ad8.json  06c281bb-f437-4599-945a-317398b9aa6c.json  071358fd-b688-499c-b9d2-2ad69e32b6f4.json  099ac314-15d7-4315-a960-1056b83b74f5.json  0ed5775a-4976-4614-8d28-8ebb039c4746.json  1f2fb214-2559-44db-bbcf-a2d4c6c4ab7e.json  240b7c01-216d-4dcd-956c-18cad6801269.json  29619b38-f64b-4390-a70d-0c7fb0beb36c.json  2c427900-32f0-4841-992f-7991c3925275.json  3af33d08-a2c8-4116-9ea8-b7f0db9f2edb.json  457e66e4-76db-4059-9e78-24f3c05df159.json  510d4abf-c001-4ffa-b66b-121e550c40b6.json  5646daf0-cfcc-4919-a322-4e15ae5804db.json  6261ca2e-f47d-4df4-b068-137f8d9f6d86.json  62e24725-0e8c-4eb1-9c37-cc8c30f77e99.json  66aa11c2-3b8a-4c06-a806-b7a035c5919e.json  6822f1e1-07b3-4108-ada7-31847440ffc8.json  6a83ea38-61ed-427d-a50f-20111ee7d8dc.json  6ee79a1d-9461-46e0-88e3-8d3bbb069d76.json  7a55cf86-9a66-4dd0-87c1-e5f799436212.json  80e9d8e7-d205-4289-b1ca-6d66cb164157.json  816ac96b-8d8f-420d-9e0e-070f95f996d7.json  85c86f7f-0d08-4792-b015-83c4eea9418b.json  87f03f1e-c9e3-4b46-b6f4-f80869c863b5.json  8b20a641-6029-4f2c-ae01-3e26a54e7326.json  8dda1ffa-50a3-4d4d-90ad-0cc9812b29c6.json  9b91febe-8689-49a9-bc73-f59fff95817e.json  9ba4aecc-533b-4fc0-97a9-900a2dd855c8.json  9d1542aa-6b33-43b9-ba13-741448225c0f.json  a42f0338-ef7b-4b3f-aca7-db03859d76f2.json  a4a3e224-2013-4ee0-aeeb-3eeba4814118.json  a6424c3e-3abd-4198-afc5-f4fad13a64a2.json  a7c22513-6f54-4dc9-af32-52d73939c398.json  adc4d09b-d93a-47a6-bb25-221861ef8ee2.json  b5e0b9f6-41b1-4f9f-a092-d18141e526db.json  bfafe207-831a-4e7c-b191-43ed46dddb17.json  c1c072fe-9ec7-4127-85cf-cbdef188720c.json  c3b82978-5007-470e-a5b7-39299f59bbf3.json  c6e179b2-6c33-40e4-bf41-3f1698116440.json  ccfe0a5a-e825-4bd7-bf20-7f41dc1bf7fd.json  (+8 more)
.omc/state/: last-tool-error.json  mission-state.json
.omo/: ralph-loop.local.md
.omo/run-continuation/: ses_13b672b85ffeTHxd0Eg4aBoVFb.json  ses_13ba91818ffeAtJz966Cqn8lpY.json  ses_13eabac84ffeUqiEGzp64XidJC.json  ses_13f8bc748ffeNpXXTFQmKJzFTG.json  ses_146306da1ffeQr4XapZ5Mu3hJ4.json  ses_146576975ffeMurSobMOC1WEaQ.json  ses_14c08d158ffe6weVSFblQ1FzXo.json
.omx/: metrics.json
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
.specs/: SPEC-PHASE1.md  SPEC-PHASE2.md  SPEC-PHASE3.md  SPEC-PHASE4.md
alembic/: env.py
alembic/versions/: 002_add_device_tokens.py  003_add_device_id_to_device_tokens.py  003_add_search_and_guest_columns.py  003_add_search_guest.py  004_unique_minutes_versions_task_version.py  005_add_team_sharing_policy.py  (+2 more)
backend/: conftest.py  main.py  unit_tests_results.txt
client/: .firebaserc  README.md  analysis_options.yaml  firebase.json  prd.json  progress.txt  pubspec.yaml
deploy/: requirements-ubuntu.txt  restart.sh  setup-ubuntu.sh  uvicorn.service
docs/: app-store-metadata.md  ats-proguard-config.md  e2e-device-checklist.md  firebase-setup-guide.md  google-auth-ios-runbook.md  ios-release-entitlements.plist  owll-benchmark-prd.md  privacy-policy.md  promise-radar-android-apk-gate-2026-07-01.json  promise-radar-android-device-gate-2026-07-01-current.json  promise-radar-android-device-gate-2026-07-01.json  promise-radar-e2e-evidence-2026-07-01.json  promise-radar-e2e-evidence-2026-07-02-v16-summary.json  promise-radar-e2e-evidence-2026-07-02-v17-summary.json  promise-radar-e2e-evidence-2026-07-02-v18-summary.json  promise-radar-e2e-evidence-2026-07-02-v19-summary.json  promise-radar-e2e-evidence-2026-07-02-v20-summary.json  release-e2e-evidence.example.json  release-e2e-evidence.json  release-procedure.md  screenshot-guide.md  session-summary-2026-06-17.md  session-summary-2026-06-24.md  session-summary-2026-06-27-google-auth.md  session-summary-2026-06-30-apns-fcm-push.md  session-summary-2026-06-30-pyannote-voiceprint.md  session-summary-2026-06-30-release-builds-google-auth.md  session-summary-2026-07-01-android-promise-radar-menu.md  session-summary-2026-07-01-promise-radar-load-fix.md  session-summary-2026-07-01-promise-radar-v10.md  session-summary-2026-07-01-promise-radar-v11.md  session-summary-2026-07-01-promise-radar-v12.md  session-summary-2026-07-01-promise-radar-v13.md  session-summary-2026-07-01-promise-radar-v6.md  session-summary-2026-07-01-promise-radar-v7.md  session-summary-2026-07-01-promise-radar-v8.md  session-summary-2026-07-01-promise-radar-v9.md  session-summary-2026-07-01-release-signing.md  session-summary-2026-07-02-ios-badge-launchagent.md  session-summary-2026-07-02-promise-radar-v14.md  (+7 more)
memory/: moltbook-history.json  ros2-progress.md
nginx/: nginx.conf
omx_wiki/: index.md  log.md  mobile-native-build-verification.md  session-2026-06-24-recording-pipeline-recovery.md  session-2026-06-27-iphone-backend-stt-recovery.md  session-2026-06-30-apns-fcm-push.md  session-2026-06-30-pyannote-voiceprint-access.md  session-2026-06-30-release-builds-google-auth.md  session-2026-07-01-promise-radar-v11.md  session-2026-07-02-ios-badge-launchagent.md
qnet-quiz/: questions-2026-06-24.json
scripts/: backfill_meeting_ownership.py  install_backend_api_launch_agent.sh  qnet-daily-quiz.sh  quiz_formatter.py  reddit_crawler.py  run_backend_api.sh
(+1337 files in other folders)
