[project]
name = "voice-to-textnote-backend"
version = "0.1.0"
description = "Privacy-first automated meeting minutes using local mlx-whisper"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
    "celery[redis]>=5.6.2",
    "redis>=5.0",
    "mlx-whisper>=0.4.3",
    "mlx>=0.31.1",
    "pyannote-audio>=3.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "huggingface-hub>=0.23.0",
    "pydub>=0.25.1",
    "python-multipart>=0.0.9",
    "structlog>=24.0",
    "psutil>=5.9",
    "aiofiles>=24.0",
    "anthropic>=0.28.0",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend"]
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
