[project]
name = "voice-to-textnote-backend"
version = "0.2.0-dev"
description = "Privacy-first automated meeting minutes using local mlx-whisper"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
    "celery[redis]>=5.6.2",
    "redis>=5.0",
    "mlx-whisper>=0.4.3",
    "mlx>=0.31.1",
    # Linux/CPU 환경에서 STT 가속 (CTranslate2 int8, openai-whisper 대비 ~4-6배 빠름)
    "faster-whisper>=1.0.0",
    "pyannote-audio>=3.1.0",
    # REQ-DIA-PERF-002: 화자 분리 전 무음 구간 제거 (회의 무음 비율만큼 가속)
    "silero-vad>=5.0",
    "torch>=2.11.0",
    "torchaudio>=2.0.0",
    "huggingface-hub>=1.10.1",
    "pydub>=0.25.1",
    # Python 3.13+에서 표준 audioop 모듈이 PEP 594로 제거됨. pydub가 audioop을 import하므로 백포트 필요.
    "audioop-lts>=0.2.2; python_version >= '3.13'",
    "python-multipart>=0.0.9",
    # AI 기반 오디오 증강을 위한 의존성
    "librosa>=0.10.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "structlog>=24.0",
    "psutil>=5.9",
    "aiofiles>=24.0",
    "anthropic>=0.28.0",
    # qa_service / sentiment_analyzer / summary_generator / mind_map_generator가 사용
    "openai>=2.0",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0",
    "prometheus-client>=0.20",
    "sse-starlette>=2.0",
    # SPEC-DB-001: 데이터베이스 의존성
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    # SPEC-EXPORT-001: PDF 생성 의존성
    "fpdf2>=2.8.1",
    "python-docx>=1.1.0",
    # SPEC-TEAM-001: JWT 인증 의존성
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "pydantic[email]>=2.9",
    # SPEC-MOBILE-001: FCM 푸시 알림 의존성
    "firebase-admin>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend"]
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = [
    "backend/tests/*",
    "backend/tests/**/*",
    "backend/workers/tasks/transcription_task.py",
    "backend/workers/tasks/diarization_task.py",
    "backend/workers/tasks/summary_task.py",
    "backend/workers/tasks/minutes_task.py",
    "backend/workers/tasks/sentiment_task.py",
    "backend/workers/tasks/mind_map_task.py",
    "backend/workers/tasks/cleanup_task.py",
    "backend/pipeline/*",
    "backend/ml/*",
    "backend/conftest.py",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "def __repr__",
    "search_results.extend",
    "total_hits \\+=",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "PTH", "RUF"]
ignore = [
    "E501",
    "B008",   # function-call-in-default-argument: FastAPI Depends() 정상 패턴
    "SIM117", # multiple-with-statements: 호환성 유지
    "B017",   # assert-raises-exception: 테스트 의도 명확성
    "RUF001", # ambiguous-unicode-character-string: 한국어 문자열 정상
    "N806",   # non-lowercase-variable-in-function: 기존 DB/Pydantic 컨벤션
    "N803",   # invalid-argument-name: 기존 API 파라미터 컨벤션
    "N801",   # invalid-class-name: 기존 모델 컨벤션
    "N817",   # camelcase-imported-as-acronym: 기존 import 컨벤션
    "PTH123", # builtin-open: pathlib 마이그레이션 위험
    "PTH108", # os-unlink: pathlib 마이그레이션 위험
    "PTH122", # os-path-splitext: pathlib 마이그레이션 위험
    "SIM115", # open-file-without-context-handler: 기존 패턴 유지
    "RUF006", # asyncio-dangling-task: conftest 정리 의도적
]
